@@ -4,7 +4,11 @@ class ActiveScaffold::Bridges::PaperTrail < ActiveScaffold::DataStructures::Brid
     require File.join(File.dirname(__FILE__), "paper_trail/actions")
     require File.join(File.dirname(__FILE__), "paper_trail/config")
     require File.join(File.dirname(__FILE__), "paper_trail/helper")
-    ActiveScaffold::Config::Core.send :include, ActiveScaffold::Bridges::PaperTrail::PaperTrailBridge
+  end
+  
+  def self.prepare
+    puts 'prepare papertrail'
     ActionDispatch::Routing::ACTIVE_SCAFFOLD_CORE_ROUTING[:collection][:deleted] = :get
+    puts ActionDispatch::Routing::ACTIVE_SCAFFOLD_CORE_ROUTING.inspect
   end
 end
